--- a/BattleshipsEngine/BattleshipsEngine.csproj
+++ b/BattleshipsEngine/BattleshipsEngine.csproj
@@ -9,5 +9,12 @@
       <_Parameter1>BattleshipsEngineTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+
 </Project>
