started adding UI and validations in Game project plus small refactorings in Engine project

--- a/BattleshipsGame/BattleshipsGame.csproj
+++ b/BattleshipsGame/BattleshipsGame.csproj
@@ -9,4 +9,15 @@
     <ProjectReference Include="..\BattleshipsEngine\BattleshipsEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>BattleshipsGameTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
